# socketclient

./: CMakeLists.txt  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
doc/: UI Items.txt
inc/: HTTPClient.hpp  PropertiesSingleton.hpp
src/: HTTPClient.cpp  client.cpp
